--- a/index.html
+++ b/index.html
@@ -17,50 +17,62 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <header style="background-image: url('images/mobile/image-header.jpg')">
-      <nav>
+    <header
+      style="background-image: url('images/mobile/image-header.jpg')"
+      class="header"
+    >
+      <nav class="header__nav">
         <img src="images/logo.svg" />
         <img src="images/icon-hamburger.svg" />
       </nav>
-      <h1>WE ARE CREATIVES</h1>
-      <img src="images/icon-arrow-down.svg" />
+      <h1 class="header__title">WE ARE CREATIVES</h1>
+      <img class="header__arrow" src="images/icon-arrow-down.svg" />
     </header>
     <main>
-      <section>
-        <h2>Transform your brand</h2>
-        <p>
-          We are a full-service creative agency specializing in helping brands
-          grow fast. Engage your clients through compelling visuals that do most
-          of the marketing for you.
-        </p>
-        <a href="">LEARN MORE</a>
+      <section class="about">
+        <div class="content">
+          <img src="images/mobile/image-transform.jpg" class="content__image" />
+          <div class="content__details">
+            <h2 class="content__title">Transform your brand</h2>
+            <p class="content__body">
+              We are a full-service creative agency specializing in helping
+              brands grow fast. Engage your clients through compelling visuals
+              that do most of the marketing for you.
+            </p>
+            <a class="content__cta" href="">LEARN MORE</a>
+          </div>
+        </div>
+        <div class="content">
+          <img src="images/mobile/image-stand-out.jpg" class="content__image" />
+          <div class="content__details">
+            <h2 class="content__title">Stand out to the right audience</h2>
+            <p class="content__body">
+              Using a collaborative formula of designers, researchers,
+              photographers, videographers, and copywriters, we’ll build and
+              extend your brand in digital places.
+            </p>
+            <a class="content__cta" href="">LEARN MORE</a>
+          </div>
+        </div>
       </section>
-      <section></section>
-      <section>
-        <h2>Stand out to the right audience</h2>
-        <p>
-          Using a collaborative formula of designers, researchers,
-          photographers, videographers, and copywriters, we’ll build and extend
-          your brand in digital places.
-        </p>
-        <a href="">LEARN MORE</a>
+      <section class="services">
+        <section>
+          <h2>Graphic design</h2>
+          <p>
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </section>
+        <section>
+          <h2>Photography</h2>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </section>
       </section>
-      <section></section>
-      <section>
-        <h2>Graphic design</h2>
-        <p>
-          Great design makes you memorable. We deliver artwork that underscores
-          your brand message and captures potential clients’ attention.
-        </p>
-      </section>
-      <section>
-        <h2>Photography</h2>
-        <p>
-          Increase your credibility by getting the most stunning, high-quality
-          photos that improve your business image.
-        </p>
-      </section>
-      <div class="testimonials">
+      <section class="testimonials">
         <h2>Client testimonials</h2>
         <div class="client">
           <p>
@@ -86,7 +98,8 @@
           <h2>Jennie F.</h2>
           <h3>Business Owner</h3>
         </div>
-      </div>
+      </section>
+      <section class="gallery"></section>
     </main>
     <footer>
       <ul>
