--- a/index.html
+++ b/index.html
@@ -56,21 +56,29 @@
         </div>
       </section>
       <section class="services">
-        <section>
+        <div
+          class="service"
+          style="
+            background-image: url('images/mobile/image-graphic-design.jpg');
+          "
+        >
           <h2>Graphic design</h2>
           <p>
             Great design makes you memorable. We deliver artwork that
             underscores your brand message and captures potential clients’
             attention.
           </p>
-        </section>
-        <section>
+        </div>
+        <div
+          class="service"
+          style="background-image: url('images/mobile/image-photography.jpg')"
+        >
           <h2>Photography</h2>
           <p>
             Increase your credibility by getting the most stunning, high-quality
             photos that improve your business image.
           </p>
-        </section>
+        </div>
       </section>
       <section class="testimonials">
         <h2>Client testimonials</h2>
