--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             background-image: url('images/mobile/image-graphic-design.jpg');
           "
         >
-          <h2>Graphic design</h2>
-          <p>
+          <h2 class="service__title">Graphic design</h2>
+          <p class="service__body">
             Great design makes you memorable. We deliver artwork that
             underscores your brand message and captures potential clients’
             attention.
@@ -73,38 +73,50 @@
           class="service"
           style="background-image: url('images/mobile/image-photography.jpg')"
         >
-          <h2>Photography</h2>
-          <p>
+          <h2 class="service__title">Photography</h2>
+          <p class="service__body">
             Increase your credibility by getting the most stunning, high-quality
             photos that improve your business image.
           </p>
         </div>
       </section>
       <section class="testimonials">
-        <h2>Client testimonials</h2>
-        <div class="client">
-          <p>
+        <h2 class="testimonials__title">CLIENT TESTIMONIALS</h2>
+        <div class="testimonial">
+          <img
+            class="testimonial__display-picture"
+            src="images/image-emily.jpg"
+          />
+          <p class="testimonial__body">
             We put our trust in Sunnyside and they delivered, making sure our
             needs were met and deadlines were always hit.
           </p>
-          <h2>Emily R.</h2>
-          <h3>Marketing Director</h3>
+          <h3 class="testimonial__name">Emily R.</h3>
+          <p class="testimonial__position">Marketing Director</p>
         </div>
-        <div class="client">
-          <p>
+        <div class="testimonial">
+          <img
+            class="testimonial__display-picture"
+            src="images/image-thomas.jpg"
+          />
+          <p class="testimonial__body">
             Sunnyside’s enthusiasm coupled with their keen interest in our
             brand’s success made it a satisfying and enjoyable experience.
           </p>
-          <h2>Thomas S.</h2>
-          <h3>Chief Operating Officer</h3>
+          <h3 class="testimonial__name">Thomas S.</h3>
+          <p class="testimonial__position">Chief Operating Officer</p>
         </div>
-        <div class="client">
-          <p>
+        <div class="testimonial">
+          <img
+            class="testimonial__display-picture"
+            src="images/image-jennie.jpg"
+          />
+          <p class="testimonial__body">
             Incredible end result! Our sales increased over 400% when we worked
             with Sunnyside. Highly recommended!
           </p>
-          <h2>Jennie F.</h2>
-          <h3>Business Owner</h3>
+          <h3 class="testimonial__name">Jennie F.</h3>
+          <p class="testimonial__position">Business Owner</p>
         </div>
       </section>
       <section class="gallery"></section>
