--- a/index.html
+++ b/index.html
@@ -119,7 +119,24 @@
           <p class="testimonial__position">Business Owner</p>
         </div>
       </section>
-      <section class="gallery"></section>
+      <section class="gallery">
+        <img
+          class="gallery__image"
+          src="images/mobile/image-gallery-milkbottles.jpg"
+        />
+        <img
+          class="gallery__image"
+          src="images/mobile/image-gallery-orange.jpg"
+        />
+        <img
+          class="gallery__image"
+          src="images/mobile/image-gallery-cone.jpg"
+        />
+        <img
+          class="gallery__image"
+          src="images/mobile/image-gallery-sugar-cubes.jpg"
+        />
+      </section>
     </main>
     <footer>
       <ul>
