--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img class="header__arrow" src="images/icon-arrow-down.svg" />
     </header>
     <main>
-      <section class="about">
+      <section id="about">
         <div class="content">
           <img src="images/mobile/image-transform.jpg" class="content__image" />
           <div class="content__details">
@@ -55,7 +55,7 @@
           </div>
         </div>
       </section>
-      <section class="services">
+      <section id="services">
         <div
           class="service"
           style="
@@ -80,7 +80,7 @@
           </p>
         </div>
       </section>
-      <section class="testimonials">
+      <section id="testimonials" class="testimonials">
         <h2 class="testimonials__title">CLIENT TESTIMONIALS</h2>
         <div class="testimonial">
           <img
@@ -119,7 +119,7 @@
           <p class="testimonial__position">Business Owner</p>
         </div>
       </section>
-      <section class="gallery">
+      <section id="gallery" class="gallery">
         <img
           class="gallery__image"
           src="images/mobile/image-gallery-milkbottles.jpg"
@@ -138,13 +138,45 @@
         />
       </section>
     </main>
-    <footer>
-      <ul>
-        <li>About</li>
-        <li>Services</li>
-        <li>Projects</li>
-        <li>Contact</li>
-      </ul>
+    <footer class="footer">
+      <img class="footer__title" src="images/logo.svg" />
+      <nav>
+        <ul class="footer__nav-list">
+          <li>
+            <a class="footer__nav-item" href="#about">About</a>
+          </li>
+          <li>
+            <a class="footer__nav-item" href="#services">Services</a>
+          </li>
+          <li>
+            <a class="footer__nav-item" href="#gallery">Projects</a>
+          </li>
+        </ul>
+      </nav>
+      <section class="footer__contacts">
+        <ul class="footer__contact-list">
+          <li class="footer__contact-item">
+            <a href="">
+              <img src="images/icon-facebook.svg" />
+            </a>
+          </li>
+          <li class="footer__contact-item">
+            <a href="">
+              <img src="images/icon-instagram.svg" />
+            </a>
+          </li>
+          <li class="footer__contact-item">
+            <a href="">
+              <img src="images/icon-twitter.svg" />
+            </a>
+          </li>
+          <li class="footer__contact-item">
+            <a href="">
+              <img src="images/icon-pinterest.svg" />
+            </a>
+          </li>
+        </ul>
+      </section>
     </footer>
     <!-- <div class="attribution">
       Challenge by
