Added some modifiers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
               brands grow fast. Engage your clients through compelling visuals
               that do most of the marketing for you.
             </p>
-            <a class="content__cta" href="">LEARN MORE</a>
+            <a class="content__cta content__cta--transform" href=""
+              >LEARN MORE</a
+            >
           </div>
         </div>
         <div class="content">
@@ -51,13 +53,15 @@
               photographers, videographers, and copywriters, we’ll build and
               extend your brand in digital places.
             </p>
-            <a class="content__cta" href="">LEARN MORE</a>
+            <a class="content__cta content__cta--standout" href=""
+              >LEARN MORE</a
+            >
           </div>
         </div>
       </section>
       <section id="services">
         <div
-          class="service"
+          class="service service--green"
           style="
             background-image: url('images/mobile/image-graphic-design.jpg');
           "
@@ -70,7 +74,7 @@
           </p>
         </div>
         <div
-          class="service"
+          class="service service--blue"
           style="background-image: url('images/mobile/image-photography.jpg')"
         >
           <h2 class="service__title">Photography</h2>
