--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -13,17 +12,26 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Sunnyside agency landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <header
-      style="background-image: url('images/mobile/image-header.jpg')"
-      class="header"
-    >
+    <header class="header">
       <nav class="header__nav">
         <img src="images/logo.svg" />
-        <img src="images/icon-hamburger.svg" />
+        <div>
+          <a href="#" class="header__hamburger">
+            <img src="images/icon-hamburger.svg" />
+          </a>
+        </div>
+        <ul class="header__links">
+          <li><a href="#" class="header__link-item">About</a></li>
+          <li><a href="#" class="header__link-item">Services</a></li>
+          <li><a href="#" class="header__link-item">Projects</a></li>
+          <li>
+            <a href="#" class="header__link-item header__link-item--cta"
+              >CONTACT</a
+            >
+          </li>
+        </ul>
       </nav>
       <h1 class="header__title">WE ARE CREATIVES</h1>
       <img class="header__arrow" src="images/icon-arrow-down.svg" />
@@ -31,7 +39,7 @@
     <main>
       <section id="about">
         <div class="content">
-          <img src="images/mobile/image-transform.jpg" class="content__image" />
+          <img class="content__image content__image--transform" />
           <div class="content__details">
             <h2 class="content__title">Transform your brand</h2>
             <p class="content__body">
@@ -45,7 +53,7 @@
           </div>
         </div>
         <div class="content">
-          <img src="images/mobile/image-stand-out.jpg" class="content__image" />
+          <img class="content__image content__image--stand-out" />
           <div class="content__details">
             <h2 class="content__title">Stand out to the right audience</h2>
             <p class="content__body">
@@ -59,13 +67,8 @@
           </div>
         </div>
       </section>
-      <section id="services">
-        <div
-          class="service service--green"
-          style="
-            background-image: url('images/mobile/image-graphic-design.jpg');
-          "
-        >
+      <section id="services" class="services">
+        <div class="service service--green">
           <h2 class="service__title">Graphic design</h2>
           <p class="service__body">
             Great design makes you memorable. We deliver artwork that
@@ -73,10 +76,7 @@
             attention.
           </p>
         </div>
-        <div
-          class="service service--blue"
-          style="background-image: url('images/mobile/image-photography.jpg')"
-        >
+        <div class="service service--blue">
           <h2 class="service__title">Photography</h2>
           <p class="service__body">
             Increase your credibility by getting the most stunning, high-quality
@@ -86,65 +86,55 @@
       </section>
       <section id="testimonials" class="testimonials">
         <h2 class="testimonials__title">CLIENT TESTIMONIALS</h2>
-        <div class="testimonial">
-          <img
-            class="testimonial__display-picture"
-            src="images/image-emily.jpg"
-          />
-          <p class="testimonial__body">
-            We put our trust in Sunnyside and they delivered, making sure our
-            needs were met and deadlines were always hit.
-          </p>
-          <h3 class="testimonial__name">Emily R.</h3>
-          <p class="testimonial__position">Marketing Director</p>
-        </div>
-        <div class="testimonial">
-          <img
-            class="testimonial__display-picture"
-            src="images/image-thomas.jpg"
-          />
-          <p class="testimonial__body">
-            Sunnyside’s enthusiasm coupled with their keen interest in our
-            brand’s success made it a satisfying and enjoyable experience.
-          </p>
-          <h3 class="testimonial__name">Thomas S.</h3>
-          <p class="testimonial__position">Chief Operating Officer</p>
-        </div>
-        <div class="testimonial">
-          <img
-            class="testimonial__display-picture"
-            src="images/image-jennie.jpg"
-          />
-          <p class="testimonial__body">
-            Incredible end result! Our sales increased over 400% when we worked
-            with Sunnyside. Highly recommended!
-          </p>
-          <h3 class="testimonial__name">Jennie F.</h3>
-          <p class="testimonial__position">Business Owner</p>
+        <div class="testimonials__list">
+          <div class="testimonial">
+            <img
+              class="testimonial__display-picture"
+              src="images/image-emily.jpg"
+            />
+            <p class="testimonial__body">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <h3 class="testimonial__name">Emily R.</h3>
+            <p class="testimonial__position">Marketing Director</p>
+          </div>
+          <div class="testimonial">
+            <img
+              class="testimonial__display-picture"
+              src="images/image-thomas.jpg"
+            />
+            <p class="testimonial__body">
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <h3 class="testimonial__name">Thomas S.</h3>
+            <p class="testimonial__position">Chief Operating Officer</p>
+          </div>
+          <div class="testimonial">
+            <img
+              class="testimonial__display-picture"
+              src="images/image-jennie.jpg"
+            />
+            <p class="testimonial__body">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <h3 class="testimonial__name">Jennie F.</h3>
+            <p class="testimonial__position">Business Owner</p>
+          </div>
         </div>
       </section>
       <section id="gallery" class="gallery">
-        <img
-          class="gallery__image"
-          src="images/mobile/image-gallery-milkbottles.jpg"
-        />
-        <img
-          class="gallery__image"
-          src="images/mobile/image-gallery-orange.jpg"
-        />
-        <img
-          class="gallery__image"
-          src="images/mobile/image-gallery-cone.jpg"
-        />
-        <img
-          class="gallery__image"
-          src="images/mobile/image-gallery-sugar-cubes.jpg"
-        />
+        <img class="gallery__image gallery__image--milkbottles" />
+        <img class="gallery__image gallery__image--orange" />
+        <img class="gallery__image gallery__image--cone" />
+        <img class="gallery__image gallery__image--cubes" />
       </section>
     </main>
     <footer class="footer">
       <img class="footer__title" src="images/logo.svg" />
-      <nav>
+      <nav class="footer__nav">
         <ul class="footer__nav-list">
           <li>
             <a class="footer__nav-item" href="#about">About</a>
@@ -182,6 +172,8 @@
         </ul>
       </section>
     </footer>
+
+    <script src="index.js"></script>
     <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
