Some tweak on index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img class="header__arrow" src="images/icon-arrow-down.svg" />
     </header>
     <main>
-      <section id="about">
+      <section id="about" class="about">
         <div class="content">
           <img class="content__image content__image--transform" />
           <div class="content__details">
